# rusty-halloween

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  SHOW.md  SPEC.md  config.ron  generate.sh  justfile  rust-toolchain  rusty-halloween.code-workspace  schema.proto  test.json  test.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-pi.yml  build-py.yml  build.yml  check.yml  deploy-show-server.yml  release-esp32.yml  release.yml
common/: Cargo.toml
common/src/: lib.rs  show.rs
config/: config.ron  hardware.json  patterns.json
docs/: SPEC.md
esp32-firmware/: Cargo.toml  build.rs  justfile  out.txt  sdkconfig.defaults
esp32-firmware/.cargo/: config.toml
esp32-firmware/certs/: bundle.pem
esp32-firmware/scripts/: extract_certs.sh
esp32-firmware/src/: diagnostics.rs  hardware.rs  instructions.rs  logging.rs  main.rs  mesh.rs  node.rs  ota.rs  scan.rs  state.rs  tasks.rs  utils.rs  version.rs
esp32-firmware/src/state/: mesh.rs  mesh_ops.rs  mod.rs  ota.rs  query.rs  scan.rs  types.rs  wifi.rs
esp32-hal-firmware/: Cargo.toml
esp32-hal-firmware/.cargo/: config.toml
esp32-hal-firmware/src/: esp32_types.rs  http_client.rs  led_commands.rs  led_executor.rs  lib.rs  ntp.rs  wifi.rs
esp32s2-firmware/: Cargo.toml  build.rs  diagram.json  partitions2.csv  wokwi.toml
esp32s2-firmware/.cargo/: config.toml
esp32s2-firmware/.github/workflows/: rust_ci.yml
esp32s2-firmware/src/: espnow.rs  instructions.rs  led.rs  lib.rs  ota.rs  protocol.rs  routing.rs  time_sync.rs
examples/: thing.rs
nomad/: show-server.nomad
pico-projector/: Cargo.toml
pico-projector/src/: main.rs
python_transfer/: main.py
python_transfer/proto_schema/: schema_pb2.py
python_transfer/translate/: spi.txt  translate.py
scripts/: aidan-serial.py
show-server/: .dockerignore  Cargo.toml  DEPLOYMENT.md  Dockerfile
show-server/src/: main.rs
shows/test/: instructions-exported.json
src/: bin.rs  config.rs  lib.rs  main.rs  pico.rs  structure.rs
src/audio/: mod.rs
src/dashboard/: layout.rs  mod.rs
src/dmx/: mod.rs  pack.rs
src/laser/: mod.rs  pack.rs
src/lights/: mod.rs
src/projector/: helpers.rs  mod.rs  pack.rs  spi.rs  uart.rs
src/projector/visions/assets/: happy.txt
src/proto_schema/: mod.rs  schema.rs
src/show/: mod.rs  show.rs  show_manager.rs
src/show/assets/: halloween.json  lights.json
src/show/assets/2024/: hardware.json  song.json
src/uart/: mod.rs
