[package]
name = "rusty-halloween"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Sending data
interprocess = "1.1.1"
protobuf = "3.2.0"

# Dashboard
notify = "=5.0.0-pre.14"
rillrate = "0.41.0"

# Embedded
rppal = "0.13.1"
packed_struct = "0.10.0"
kira = "0.7.0"

# Embed the audio files
rust-embed = { version = "6.4.1", features = ["debug-embed"] }

# Async
tokio = { version = "1.21.2", features = ["full"] }

# Logging
env_logger = "0.9.1"
log = "0.4.17"
anyhow = "1.0.65"
