[package]
name = "rusty-halloween"
version = "0.1.3"
edition = "2021"

[lib]
name = "rusty_halloween"
path = "src/lib.rs"

[[bin]]
name = "rusty-halloween"
path = "src/bin.rs"

[features]
default = []
pi = ["dep:rppal"]

[dependencies]
# Sending data
interprocess = "1.1.1"
protobuf = "3.2.0"

# Dashboard
notify = "=5.0.0-pre.14"
rillrate = "0.41.0"

# Embedded
rppal = { version = "0.13.1", optional = true }
packed_struct = "0.10.0"
kira = "0.7.0"

# Embed the audio files
rust-embed = { version = "6.4.1", features = ["debug-embed"] }

# Async
tokio = { version = "1.21.2", features = ["full"] }

# Logging
env_logger = "0.9.1"
log = "0.4.17"
anyhow = "1.0.65"
ron = "0.8.0"
serde = { version = "1.0.145", features = ["derive"] }
pi-pinout = "0.1.3"
rill-protocol = "0.41.0"
json = "0.12.4"
