[package]
name = "rusty-halloween"
version = "0.1.6"
edition = "2021"
default-run = "rusty-halloween"

[workspace]
members = [
    "pico-projector",
    "common",
]

[lib]
name = "rusty_halloween"
path = "src/lib.rs"

[[bin]]
name = "rusty-halloween"
path = "src/bin.rs"

[features]
default = []
pi = ["dep:rppal"]
embed_audio = []
audio = []

[dependencies]
# Sending data
interprocess = "1.1.1"

# Dashboard
notify = "6.1.1"
# rillrate = "0.41.0"
# dashboard_core = { path = "../egui-dashboard/dashboard_core" }

# Embedded
rppal = { version = "0.15.0", optional = true }
packed_struct = "0.10.0"
kira = { version = "0.8.5" }

# Embed the audio files
rust-embed = { version = "8.0.0", features = ["debug-embed"] }

# Async
tokio = { version = "1.21.2", features = ["full"] }

# Logging
env_logger = "0.10.0"
log = "0.4.17"
anyhow = "1.0.65"
ron = "0.8.0"
serde = { version = "1.0.145", features = ["derive"] }
pi-pinout = "0.1.3"
# rill-protocol = "0.41.0"
json = "0.12.4"
rand = "0.8.5"
console-subscriber = "0.2.0"
chrono = "0.4.31"
