[workspace]
# Empty workspace to exclude from parent workspace

[package]
name = "esp32-mesh-firmware"
version = "0.1.1"
authors = ["Forest Anderson <forestkzanderson@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-mesh-firmware"
path = "src/main.rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"
debug            = true
debug-assertions = true
lto              = "fat"
codegen-units    = 1

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
# esp-println = { version = "0.16", features = ["log-04", "esp32s2"] }
esp-idf-sys = { version = "0.36.1", features = ["binstart"] }
esp-idf-hal = { version = "0.45.2", features = ["rmt-legacy"] }
# esp-backtrace = { version = "0.18.0", features = ["esp32s2", "println"] }
heapless = "0.8.0"
anyhow = "1"
embedded-svc = { version = "0.28.1", features = ["experimental"] }
esp-idf-svc = { version = "0.51", features = ["experimental", "alloc"] }
once_cell = "1.19"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
smart-leds = "0.4"
# ws2812-esp32-rmt-driver = { path = "../ws2812-esp32-rmt-driver", features = ["smart-leds-trait"] }
ws2812-esp32-rmt-driver = { version = "0.12.0", features = ["smart-leds-trait"] }
rgb = { version = "0.8.52", features = ["serde"] }
crc = "3.0"
esp-ota = "0.2.2"

[build-dependencies]
embuild = "0.33"